table word wrap fix

--- a/src/blocks/model-row/model-row.scss
+++ b/src/blocks/model-row/model-row.scss
@@ -144,7 +144,7 @@
 table{
   width:100%;
   table-layout: fixed;
-  border-collapse: collapse;
+  // border-collapse: collapse;
 }
 
 .tbl-header{
@@ -166,6 +166,7 @@ th{
   font-size: 12px;
   color: $black;
   text-transform: uppercase;
+  word-break: break-all;
 }
 
 td{
@@ -174,6 +175,7 @@ td{
   vertical-align:middle;
   font-size: 14px;
   color: #433f3f;
+  word-break: break-all;
   // border-bottom: solid 1px rgba(255,255,255,0.1);
 }
 
@@ -190,6 +192,16 @@ td{
     box-shadow: -1px 1px 4px #dedede;
     background-color: #fbf9f9;
   }
+
+  &:hover .th--highlighted {
+    color: $colorPrimery;
+    &::after {
+      content: '>';
+      position: absolute;
+      margin-left: 10px;
+      text-decoration: none;
+    }
+  }
 }
 
 tbody {
@@ -198,6 +210,9 @@ tbody {
 
 .th--highlighted {
   color: $colorPrimery;
+  &:hover {
+    text-decoration: none;
+  }
 }
 
 
